--- a/index.html
+++ b/index.html
@@ -302,17 +302,17 @@ border-radius: 10px;position: relative;}
 
   .text_on_01 {display: none;}
   .m2_01:hover .text_on_01 {display: block;transition-duration: 1s;color: #333;border-radius: 10px 0px 0px 10px;}
-  .m2_01:hover {background-color: #fff;}
+  .m2_01:hover {background: url(image/html5-ok.png);}
  .m2_01:hover .m2_01_text1 {display: none;transition: 0.5s;}
 
   .text_on_02 {display: none;}
   .m2_02:hover .text_on_02 {display: block;transition-duration: 1s;color: #333;border-radius: 10px 0px 0px 10px;}
-  .m2_02:hover {background-color: #fff;}
+  .m2_02:hover {background:url(image/css3-ok.png);}
  .m2_02:hover .m2_02_text1 {display: none;transition: 0.5s;}
 
  .text_on_03 {display: none;}
   .m2_03:hover .text_on_03 {display: block;transition-duration: 1s;color: #333;border-radius: 10px 0px 0px 10px;}
-  .m2_03:hover {background-color: #fff;}
+  .m2_03:hover {background:url(image/js-ok.png)}
  .m2_03:hover .m2_03_text1 {display: none;transition: 0.5s;}
 
  .text_on_04 {display: none;}
@@ -445,7 +445,7 @@ border-radius: 10px;position: relative;}
              <div class="graph_01" style="border-radius: 10px; position: absolute;">
                 <div class="graph_01_2" style="border-radius: 10px 0px 0px 10px;position: absolute;">      
                   <style>
-                    .m2_01 {background: url(image/html5-ok.png);opacity: 0.2;}
+                    
                     </style>         
                 </div>
              </div>
