--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ border-radius: 10px;position: relative;}
 #gnb { 	width:220px; position:absolute; top:10px; right:0px;}
 #gnb>li {position:relative; }
 #gnb>li>a { display:block; width:220px; height:50px; font:bold 18px/3 play; color:#222; box-sizing:border-box; padding-right:40px; text-align:right;}
-#gnb>li.on>a { background:#111; color:#fff;}
+#gnb>li.on>a { background:; color:#111;}
 #gnb>li:hover>a { background:#111; color:#fff;}
 #gnb em { display:inline-block; transform:skewX(40deg)!important; }
 #gnb em i { 	margin-right:20px;}
