--- a/b2/menu1-1.html
+++ b/b2/menu1-1.html
@@ -39,10 +39,9 @@ border-top:2px solid #333; display:none;  }
 .nt_wrap label{margin-left: 10px;font-size: 20px;font-weight: bold;}
 .nt_wrap3 label{margin-left: 10px;font-size: 20px;font-weight: bold;}
 #area1,#area2{font-size: 18px;}
-
-.voice {font-size: 20px;width: 1885px;height: 90px;border: 3px solid red;}
-
-
+.voice {font-size: 20px;width: 1885px;height:auto;border: 3px solid red;}
+.voice {width: 1360px;text-align: center;}
+.impor {width: 1360px;margin-left: 295px;}                  
 .name_ck #text3{width: 200px;height: 50px;}
 #label3{font-size: 20px;}
 .fnb {margin-left: 270px;}
@@ -222,11 +221,7 @@ border-top:2px solid #333; display:none;  }
                             <span class="checkmark"></span>
                           </label>
                         
-                      <style>
-                      .impor {width: 1360px;margin-left: 295px;}
-                      .voice {width: 1360px;text-align: center;}
-
-                      </style>
+                  
                         </div>
                                 <div class="impor">
                                 <p class="voice">※ 국민신문고나 행정기관 누리집(홈페이지)로 민원신청을 유도한 후 금융정보(계좌번호, 카드번호, 비밀번호 등)를 요구하는 사기 전화(보이스 피싱) 사례가 발생하고 있습니다.<br>
