--- a/ban04/index.html
+++ b/ban04/index.html
@@ -27,10 +27,10 @@
 			</h1>
 			<nav class="nav">
 				<ul class="gnb">
-					<li><a href="menu_01.html">정보공개</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
-					<li><a href="introudce.html">새소식</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
-					<li><a href="gallery.html">정책정보</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
-					<li><a href="board.html">통계청소개</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
+					<li><a href="">정보공개</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
+					<li><a href="">새소식</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
+					<li><a href="">정책정보</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
+					<li><a href="">통계청소개</a><span class="sub_menu_toggle_btn">하위 메뉴 토글 버튼</span></li>
 				</ul>
 			</nav>
 			<span class="menu_toggle_btn">전체 메뉴 토글 버튼</span>
