--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
    <script src="http://code.jquery.com/jquery-latest.js"></script>
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+ 
    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="shortcut icon" href="image/favi/favi.ico">
+  <meta property="og:image" content="image/favi/favi.png">
   <script type="text/javascript" src="js/prefixfree.min.js"></script>
     <title>이예준 포트폴리오</title>
     <style>
@@ -190,7 +192,7 @@ text-shadow: 0 8px 9px, 0px -2px 1px #fff; }
     .lst .m2_04{ transition-delay:0.4s; }  
     .lst .m2_05{ transition-delay:0.5s; }  
     .lst .m2_06{ transition-delay:0.4s; }  
-    .lst .m2_07{ transition-delay:0.3s; }  
+    .lst .m2_07{ transition-delay:0.3s; }   
     .lst .m2_08{ transition-delay:0.2s; }  
      
     .lst.on li a img { margin-top: 0; opacity:1; }
