--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="image/favi/favi.ico">
   <meta property="og:image" content="image/favi/favi.png">
-  <meta property="og:description" content="이예준 포트폴리오">
+  <meta property="og:description" content="이예준 포트폴리오입니다.">
+  <meta property="og:title" content="이예준 포트폴리오.">
   <script type="text/javascript" src="js/prefixfree.min.js"></script>
     <title>이예준 포트폴리오</title>
     <style>
