--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css" />
   <script type="text/javascript" src="js/prefixfree.min.js"></script>
+  <link rel="shortcut icon" href="image/favi/favi.ico">
+  <meta property="og:image" content="image/favi/favi.png">
+  <meta property="og:description" content="이예준 포트폴리오입니다.">
     <title>이예준 포트폴리오</title>
     <style>
     * { margin: 0; padding: 0; }
