--- a/index.html
+++ b/index.html
@@ -407,16 +407,16 @@ border-radius: 10px;position: relative;}
   <header>		
 		<ul id="gnb1">
 			<li class="on1">
-        <a><em>ABOUT YEJUN?</em></a>	
+        <a href="#page1"><em>ABOUT YEJUN?</em></a>	
 			</li>
 			<li>
-				<a><em>My SKILLS</em></a>				
+				<a href="#page2"><em>My SKILLS</em></a>				
 			</li>
 			<li>
-				<a><em>My SITE</em></a>
+				<a href="#page3"><em>My SITE</em></a>
 			</li>
 			<li>
-				<a><em>PROFILE</em></a>
+				<a href="#page4"><em>PROFILE</em></a>
 			</li>
 		</ul>
   </header>
@@ -660,17 +660,7 @@ function openPage(pageName,elmnt,color) {
 
 // Get the element with id="defaultOpen" and click on it
 document.getElementById("defaultOpen").click();
-</script>
-
-  
-
-
-
-
-
-  
-    
-  
+</script>  
   </div>
 </div>
 
