--- a/ban7/index.html
+++ b/ban7/index.html
@@ -410,10 +410,13 @@ figure {margin-left: 0;}
 	-webkit-transform: translateY(5px);
     opacity: 1;
 }
+.column {width: 200px;height: auto;}
 .column a {border-radius: 30px;}
+.column .expanded {width: 200px;}
+.expanded {width: 200px;}
 </style>
-<div class="row column text-center">
-<h3 style="text-align: left;font-size:17px;">알림 사항</h3>
+<div class="row column text-center" style="margin-top: 100px;" >
+<h3 style="font-size:17px;margin-bottom: 50px;right: 400px;;">알림 사항</h3>
 </div>
 <div class="row small-up-2 large-up-4" id="back_03">
 <div class="column">
