--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="image/favi/favi.ico">
+  <link rel="icon" href="image/favi/favi152.png">
   <script type="text/javascript" src="js/prefixfree.min.js"></script>
     <title>이예준 포트폴리오</title>
     <style>
@@ -615,7 +616,7 @@ document.getElementById("defaultOpen").click();
       <section>
         <article>			
           <div class="bg bg1">		
-            <span>LEE YEJUN</span >
+            <span>LEE YEJUN</span>
           </div>			
         </article>
         <article>		
@@ -650,7 +651,8 @@ document.getElementById("defaultOpen").click();
             <p style="font-size: 20px;">
               <strong>이 예 준</strong><br/>
              키: 168cm <br> 몸무게: 60kg <br> 생년월일: 1986년1월14일 <br>
-             취미 : 드라마 , 음악 , 영화, 작곡  </p>
+             취미 : 드라마 , 음악 , 영화, 작곡 <br> 
+             TEL : 010 2964 5577</p>
              <ul>
                <li>
              <a href="" onclick="my()" ><img src="image/my/kakao.png" alt=""></a>
