--- a/ban7/index.html
+++ b/ban7/index.html
@@ -115,7 +115,7 @@ figure {margin: 0;padding: 0;}
 
   
   
-
+    #page1 {margin-top: 100px;}
   </style>
 
 
@@ -379,16 +379,12 @@ figure {margin: 0;padding: 0;}
 .column:hover{
 	-webkit-transform: translateY(-5px);	
 }
-.column:hover:before{
-	-webkit-transform: translateY(5px);
-    opacity: 1;
-}
-div.column {width: 200px;height: auto;position: relative;}
-div.column a {width:200px;}
-div.column .expanded {width: 200px;border-radius: 30px;}
-.expanded {width: 200px;} 
+div.column {width: 250px;height: auto;position: relative;}
+div.column a {width:250px;}
+div.column .expanded {width: 250px;border-radius: 30px;}
 .scroll {margin-left:49.5%;bottom: 25px;position: relative;height:auto;opacity: 0.7;}
 .scroll img {height: 100px;width: 70px;}
+
 </style>
 <button class="scroll" onclick="down()"><img src="image/main/scroll_down.jfif" alt=""></button>
 <script>
@@ -397,44 +393,39 @@ function down(){
 }
 </script>
 <div class="row column text-center">
-<h3 style="font-size:17px;margin-bottom: 50px;right: 400px;;">알림 사항</h3>
 </div>
 <div class="row small-up-2 large-up-4" id="back_03">
-<div class="column">
-<a href=""><img id="ban"  style="width: 800px;" class="thumbnail" src="image/main/noti_01.PNG"></a>
-<a href="#" class="button expanded">안심 프로젝트</a>
+<div class="column" >
+<a href=""><img id="ban"  style="width: 250px; margin-left:-80px;" class="thumbnail" src="image/main/noti_01.PNG"></a>
+<a href="#" class="button expanded" style="width: 250px; margin-left:-80px;">안심 프로젝트</a>
 </div>
 <div class="column" >
-    <a href=""><img id="ban" class="thumbnail" src="image/main/noti_02.PNG"></a>
+    <a href=""><img id="ban" style="width: 250px; margin-left: -10px;" class="thumbnail" src="image/main/noti_02.PNG"></a>
 
 
-<a href="#" class="button expanded">건강 지킴이</a>
+<a href="#" style="width: 250px; margin-left: -10px;" class="button expanded"  >건강 지킴이</a>
 </div>
 <div class="column" >
-    <a href=""><img id="ban" class="thumbnail" src="image/main/noti_03.PNG"></a>   
+    <a href=""><img id="ban" style="width: 250px; margin-left: 60px;" class="thumbnail" src="image/main/noti_03.PNG"></a>   
 
 
-<a href="#" class="button expanded">제도 시행 방안</a>
+<a href="#" style="width: 250px; margin-left: 60px;" class="button expanded">제도 시행 방안</a>
 </div>
 <div class="column">
-<img id="ban" class="thumbnail" src="image/main/noti_04.PNG">
+<img id="ban" style="width: 250px; margin-left: 110px;" class="thumbnail" src="image/main/noti_04.PNG">
 
 
-<a href="#" class="button expanded">방사능 안전관리</a>
+<a href="#" style="width: 250px; margin-left: 110px;" class="button expanded">방사능 안전관리</a>
 </div>
 </div>
 
 <!--배너 왼쪽으로 슬라이드 -->
-<style>
-#page1 {margin-top: 100px;}
-</style>
 <div class="page" id="page1">
     <aside class="page1_side">
         <h1 class="pageTitle">정책정보</h1>
         <p class="pageComent"></p>
         <a href="ward.html#page1" class="detail">
             <span class="hvTxt"></span>
-            <span>1ㅇㅇㅇㅇㅇ</span>
         </a>
     </aside>
     <div class="banBox2">
