--- a/index.html
+++ b/index.html
@@ -651,9 +651,9 @@ document.getElementById("defaultOpen").click();
           <div class="txt">	 
             <p style="font-size: 20px;">
               <strong>이 예 준</strong><br/>
-             키: 168cm <br> 몸무게: 60kg <br> 생년월일: 1986년1월14일 <br>
-             취미 : 드라마 , 음악 , 영화, 작곡 <br> 
-             TEL : 010 2964 5577</p>
+              생년월일: 1986년1월14일 <br>
+             취미 : 드라마 , 음악 , 영화, 작곡  
+             </p>
              <ul>
                <li>
              <a href="" onclick="my()" ><img src="image/my/kakao.png" alt=""></a>
