--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@ border-radius: 10px;position: relative;}
 </style>
 <div class="site_tab">
     <div id="Home" class="tabcontent">
-      <li><a href=""><img src="image/siteb12.png" alt="" style="width: 300px;height: auto;padding: auto auto;margin-left: 325px;margin-top: 70px;border: 1px solid #fff;"> 
+      <li><a href="https://yejun7.github.io/b12"><img src="image/siteb12.png" alt="" style="width: 300px;height: auto;padding: auto auto;margin-left: 325px;margin-top: 70px;border: 1px solid #fff;"> 
         <p style="text-align: center;color: #fff;margin-right: 50px;">The natoinal gallery</p></a></li>
     </div>
     <div id="News" class="tabcontent">
@@ -589,7 +589,7 @@ border-radius: 10px;position: relative;}
       </ul>
     </div>
     <div id="Contact" class="tabcontent">
-      <li><a href=""><img src="image/siteb2.png" alt="" style="width: 400px;height: auto;margin-left:270px;margin-top: 150px;border: 1px solid #fff;" >
+      <li><a href="https://yejun7.github.io/b2"><img src="image/siteb2.png" alt="" style="width: 400px;height: auto;margin-left:270px;margin-top: 150px;border: 1px solid #fff;" >
         <p style="color: #fff;margin-left: 335px;">과학기술정보통신부</p></a></li>
     </div>
 </div>
@@ -624,7 +624,7 @@ document.getElementById("defaultOpen").click();
           <div class="txt">
             <p style="font-size: 20px;">
               <strong>꿈과 열정을 힘으로 노력하겠습니다!</strong><br/>
-              <em>이제 그린컴퓨터아트학원에서 스마트웹콘텐츠과정을 수료예정중입니다. <br> 
+              <em>이제 그린컴퓨터아트학원에서 스마트웹콘텐츠과정을 수료하였습니다. <br> 
                 아직 실무 경험은 많이 부족하지만 열정과 노력으로 
                 새로운 일에 도전하며  <br> 배우길 마다하지 않는  인재가 되고 싶습니다. <br>
                 꾸준히 성장하는 모습을 보여드릴 것을 약속합니다.</em>
