--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@ border-radius: 10px;position: relative;}
 </style>
 <div class="site_tab">
     <div id="Home" class="tabcontent">
-      <li><a href="https://yejun7.github.io/b12"><img src="image/siteb12.png" alt="" style="width: 300px;height: auto;padding: auto auto;margin-left: 325px;margin-top: 70px;border: 1px solid #fff;"> 
+      <li><a href="https://yejun7.github.io/b12" target="_blank"><img src="image/siteb12.png" alt="" style="width: 300px;height: auto;padding: auto auto;margin-left: 325px;margin-top: 70px;border: 1px solid #fff;"> 
         <p style="text-align: center;color: #fff;margin-right: 50px;">The natoinal gallery</p></a></li>
     </div>
     <div id="News" class="tabcontent">
@@ -589,7 +589,7 @@ border-radius: 10px;position: relative;}
       </ul>
     </div>
     <div id="Contact" class="tabcontent">
-      <li><a href="https://yejun7.github.io/b2"><img src="image/siteb2.png" alt="" style="width: 400px;height: auto;margin-left:270px;margin-top: 150px;border: 1px solid #fff;" >
+      <li><a href="https://yejun7.github.io/b2" target="_blank"><img src="image/siteb2.png" alt="" style="width: 400px;height: auto;margin-left:270px;margin-top: 150px;border: 1px solid #fff;" >
         <p style="color: #fff;margin-left: 335px;">과학기술정보통신부</p></a></li>
     </div>
 </div>
