--- a/koreanpage up/index.html
+++ b/koreanpage up/index.html
@@ -150,7 +150,7 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="/img/main_image/main_04.jpeg" alt="First slide">
+          <img class="first-slide" src="img/main_image/main_04.jpeg" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
             
@@ -159,7 +159,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="second-slide" src="/img/main_image/main_02.png" alt="Second slide" style="">
+          <img class="second-slide" src="img/main_image/main_02.png" alt="Second slide" style="">
           <div class="container">
             <div class="carousel-caption">
              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
@@ -167,7 +167,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="third-slide" src="/img/main_image/main_01.png" alt="Third slide" style="">
+          <img class="third-slide" src="img/main_image/main_01.png" alt="Third slide" style="">
           <div class="container">
             <div class="carousel-caption">
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
@@ -195,19 +195,19 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
-          <img class="img-circle" src="/img/main_image/main_01.png" alt="Generic placeholder image" width="140" height="140">
+          <img class="img-circle" src="img/main_image/main_01.png" alt="Generic placeholder image" width="140" height="140">
           <h2>基本単語</h2>
           <p>韓国語の一番よく使う基本単語が勉強できます。</p>
           <p><a class="btn btn-default" href="/basic_word_1.html" role="button">勉強する &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="/img/main_image/main_02.png" alt="Generic placeholder image" width="140" height="140">
+          <img class="img-circle" src="img/main_image/main_02.png" alt="Generic placeholder image" width="140" height="140">
           <h2>基本文法</h2>
           <p>韓国語の一番よく使う基本文法が勉強できます。</p>
           <p><a class="btn btn-default" href="/basic_gram_1.html" role="button">勉強する &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="/img/main_image/main_01.png" alt="Generic placeholder image" width="140" height="140">
+          <img class="img-circle" src="img/main_image/main_01.png" alt="Generic placeholder image" width="140" height="140">
           <h2>Comunity</h2>
           <p>韓国の友達探しや韓国の質問から韓国語レッスンまで用意してあります。
           </p>
@@ -229,7 +229,7 @@
           </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="/img/main_image/main_03.jpeg" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="img/main_image/main_03.jpeg" alt="Generic placeholder image">
         </div>
       </div>
 
