--- a/koreanpage up/index.html
+++ b/koreanpage up/index.html
@@ -9,7 +9,7 @@
     <script src="connect/docs.min.js"></script>
     <link href="connect/carousel.css" rel="stylesheet">
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="connect/ie10-viewport-bug-workaround.js"></script>
+    <script src="connectie10-viewport-bug-workaround.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link href="" rel="stylesheet">
     <title>YJ Korean</title>
@@ -242,7 +242,7 @@
          </p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block" src="/img/main_image/main_04.jpeg" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="img/main_image/main_04.jpeg" alt="Generic placeholder image">
         </div>
       </div>  
 
@@ -258,7 +258,7 @@
           <p class="lead"></p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" src="/img/main_image/main_01.png" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" src="img/main_image/main_01.png" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -274,7 +274,7 @@
       <!-- FOOTER -->
       <footer style="border: 2px solid #222;">
      <ul>
-       <li><a href=""><img src="/img/logo03.png" alt="" style="width: 150px; height: 80px;left: 0;" ></a> </li>
+       <li><a href=""><img src="img/logo03.png" alt="" style="width: 150px; height: 80px;left: 0;" ></a> </li>
        <li>
         <!-- <ul>
            <li><a href=""><img src="image/main/ft_01.png" alt=""></a></li>
