--- a/koreanpage up/index.html
+++ b/koreanpage up/index.html
@@ -47,7 +47,7 @@
     <div class="navbar-wrapper">
       <div class="container">
 
-        <nav class="navbar navbar-inverse navbar-static-top" style="background-color:#fff;width: 1200px;">
+        <nav class="navbar navbar-inverse navbar-static-top" style="background-color:#fff;">
           <div class="container">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" 
