--- a/koreanpageup/index.html
+++ b/koreanpageup/index.html
@@ -136,10 +136,7 @@ body {background-color: lavenderblush;}
 
       </div>
     </div>
-<style>
 
-
-</style>
 
     <!-- Carousel
     ================================================== -->
@@ -153,10 +150,10 @@ body {background-color: lavenderblush;}
       <div class="carousel-inner" role="listbox">
         <div class="item active">
           <img class="first-slide" src="img/main_image/main_04.jpeg" alt="First slide">
-          <div class="container" style="color: pink;">
-            <div class="carousel-caption" style="color: pink;">
+          <div class="container">
+            <div class="carousel-caption">
             
-              <p><a class="btn btn-lg btn-primary" href="#" role="button" style="background-color:pink;">Learn more </a></p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button" style="background-color:#ff9990;">Learn more </a></p>
             </div>
           </div>
         </div>
@@ -164,7 +161,7 @@ body {background-color: lavenderblush;}
           <img class="second-slide" src="img/main_image/main_02.png" alt="Second slide" style="">
           <div class="container">
             <div class="carousel-caption">
-             <p><a class="btn btn-lg btn-primary" href="#" role="button" style="background-color:pink;">Learn more</a></p>
+             <p><a class="btn btn-lg btn-primary" href="#" role="button" style="background-color:#ff9999">Learn more</a></p>
             </div>
           </div>
         </div>
@@ -172,7 +169,7 @@ body {background-color: lavenderblush;}
           <img class="third-slide" src="img/main_image/main_01.png" alt="Third slide" style="">
           <div class="container">
             <div class="carousel-caption">
-              <p><a class="btn btn-lg btn-primary" href="#" role="button"style="background-color:pink;">Learn more</a></p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button"style="background-color:;">Learn more</a></p>
             </div>
           </div>
         </div>
@@ -222,11 +219,12 @@ body {background-color: lavenderblush;}
       <!-- START THE FEATURETTES -->
       <div class="my">
         <h2>＜YJ プロフィール＞</h2>
-      <p class="lead_02" style="font-size: 1.5em;">
+      <p class="lead_02" style="font-size: 1.2em;background-color: #fff;border-radius: 50%;">
      韓国人で、韓国語教師、韓国語研会、日本語通訳士、翻訳士、ウェブデザイナー、UI/UXデザイナー、YJ korean管理者をしています。<br>
      日本に何年間住んだ事があります。日本旅行２０回以上、日本ドラマ、音楽、日本語に興味を持っています。
       </p>
       </div>
+      
 
 
 
